second rebase